users migrated to clean, tests still missing